@@ -56,6 +56,7 @@ UserRecognitionMethod=[integer] 0: RecognizeByDefaultMethod      (default=0) [4.
 AllowAddMembersToGroup=[true/false] allow current user to create and add members to group (default=true) [5.4.0]
 AllowRemoveMembersFromGroup=[true/false] allow current user to remove members to group (default=true) [5.4.0]
 AllowEditNickname=[true/false] allow current user to edit his/her nickname. It is useful disabled with option UserRecognitionMethod=2 or UserRecognitionMethod=1 (default=true) [5.4.3]
+DisableCreateMessage=[true/false] if not disabled user can send broadcast messages without creating groups (default=false) [5.4.3]
 
 [Groups]
 TrustNickname=[true/false] if true BeeBEEP trusts also in nickname to recognize a user when he or she reconnect (default=true) [1.0.0] [obsolete in 4.0.0]
